fix img gallery height, youtube embed 100% width on mobile

--- a/packages/app/src/Element/Text.css
+++ b/packages/app/src/Element/Text.css
@@ -48,6 +48,10 @@
   margin: 0;
 }
 
+.gallery-item div {
+  height: 100%;
+}
+
 .gallery-item img {
   object-fit: cover;
   width: 100%;
